@@ -1,3 +1,12 @@
+Wed Feb 14 10:41:28 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* acinclude.m4: Remove and split into ...
+	* m4/man-ansi-sprintf.m4, m4/man-bdb.m4, m4/man-fnmatch.m4,
+	  m4/man-gnu-nroff.m4, m4/man-pclose.m4, m4/man-strsignal.m4: ...
+	  these new files.
+	* configure.ac (AC_CONFIG_SRCDIR): Use src/man.c rather than
+	  acinclude.m4.
+
 Wed Feb 14 10:32:28 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* libdb/db_lookup.c (make_content): Restore (size_t) cast in
